--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-## yfinance version
+numpy==1.24.0
+pandas==2.0.3
+requests==2.32.0
+streamlit==1.24.1
+openpyxl==3.1.2
+altair==5.0.1
+Pillow
+firebase_admin==6.2.0
+streamlit-tags==1.2.6
+boto3==1.28.0
